2008-10-20  Simon Goodall  <simon@worldforge.org>

	* python/wfut-server.py: Add python interpreter.

2008-10-11  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp, libwfut/IO.h, libwfut/WFUT.cpp, libwfut/WFUT.h:
	  Added a cancelAll() method to abort all current and pending
	  downloads.

2008-07-09  Simon Goodall  <simon@worldforge.org>

	* python/wfut-server.py: Added a simple server capable of serving HTTP
	  requests for a wfut repository. Uses avahi to broadcast URL.

2008-06-04  Alexey Torkhov  <atorkhov@gmail.com>

	* configure.ac, libwfut/ChannelParser.cpp, libwfut/FileParser.cpp,
	  libwfut/Makefile.am, libwfut/tinyxml.cpp, libwfut/tinyxml.h,
	  tools/Makefile.am: Last patch was applied to wrong incarnation of
	  tinyxml. This is right one. Also this fixes compatibility with new
	  version of tinyxml and compile problem.

2008-05-30  Alexey Torkhov  <atorkhov@gmail.com>

	* configure.ac, tinyxml/tinyxml.cpp, tinyxml/tinyxml.h: Use system
	  tinyxml library if available.

2008-05-16  Alexey Torkhov  <atorkhov@gmail.com>

	* libwfut/platform.cpp: Fix to support gcc 4.3.

2008-04-09  Simon Goodall  <simon@worldforge.org>

	* python/wfut-client.py, python/WUFTCore.py, python/Makefile.am: Added
	  a new file containing the core parts of the update process in a
	  class and changed wfut-python.py to use this class.

2008-04-08  Simon Goodall  <simon@worldforge.org>

	* python/Makefile.am, python/wfut-python.py: Added a sample python
	  implementation of the wfut command line tool.

2008-04-02  Simon Goodall  <simon@worldforge.org>

	* NEWS: 0.2.0 Released.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* python/WFUT.i: Create python equivalents for typedefs. Add
	  UpdateReason callback.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* Makefile.am: Add autogen.sh, libwfut.spec, libwfut.spec.in and
	  libwfut.dox as EXTRA_DIST files.

2008-03-25  Simon Goodall  <simon@worldforge.org>
