@@ -1,3 +1,8 @@
+2008-10-22  Simon Goodall  <simon@worldforge.org>
+
+	* libwfut/IO.cpp, libwfut/IO.h, libwfut/WFUT.cpp, libwfut/WFUT.h:
+	  Rename cancel to abort and improve clean up.
+
 2008-10-20  Simon Goodall  <simon@worldforge.org>
 
 	* python/wfut-server.py: Add python interpreter.
